--- a/server/public/views/styles.css
+++ b/server/public/views/styles.css
@@ -1,3 +1,14 @@
 body {
     background-color: turquoise;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+td, th {
+    border: 1px solid black;
+    padding: 0.5rem;
+    text-align: left;
 }
